--- a/DoctorAppointments/Views/Patient/index.cshtml
+++ b/DoctorAppointments/Views/Patient/index.cshtml
@@ -4,8 +4,15 @@
 }
 
 <h2 class="mb-4">Patients</h2>
+<div class="row">
+    <div class="col-12 mb-4">
+        <a class="btn btn-primary btn-sm float-end" asp-action="Create">
+            <i class="bi bi-plus-circle me-2"></i> Create New
+        </a>
+    </div>
+</div>
 
-
+@await Html.PartialAsync("_Alerts")
 
 <table class="table table-bordered table-hover table-striped">
     <thead class="table-dark">
@@ -36,16 +43,16 @@
                                     <i class="bi bi-pencil me-2"></i> Edit
                                 </a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" asp-action="Details" asp-route-id="@item.Id">
-                                    <i class="bi bi-eye me-2"></i> View Details
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item text-danger" asp-action="Delete" asp-route-id="@item.Id">
-                                    <i class="bi bi-trash me-2"></i> Delete
-                                </a>
-                            </li>
+                            @* <li> *@
+                            @*     <a class="dropdown-item" asp-action="Details" asp-route-id="@item.Id"> *@
+                            @*         <i class="bi bi-eye me-2"></i> View Details *@
+                            @*     </a> *@
+                            @* </li> *@
+                            @* <li> *@
+                            @*     <a class="dropdown-item text-danger" asp-action="Delete" asp-route-id="@item.Id"> *@
+                            @*         <i class="bi bi-trash me-2"></i> Delete *@
+                            @*     </a> *@
+                            @* </li> *@
                         </ul>
                     </div>
                 </td>
